# interpreter

./: CMakeLists.txt  README.md  coverage.sh  main.cpp
.github/workflows/: main.yml
FiniteStateMachine/finite_state_machine/: finite_state_machine.cpp  finite_state_machine.h
FiniteStateMachine/tests/: finite_state_machine.cpp  helper.h  machine_builder.cpp  solution.cpp  suffix_machine_builder.cpp
src/: types.h
src/combinators/alternative/: alternative.cpp  alternative.h
src/combinators/base_combinator/: base_combinator.cpp  base_combinator.h
src/combinators/combinator/: combinator.cpp  combinator.h
src/combinators/concator/: concator.cpp  concator.h
src/combinators/lazy/: lazy.cpp  lazy.h
src/combinators/optional/: optional.cpp  optional.h
src/combinators/phrase/: phrase.cpp  phrase.h
src/combinators/processor/: processor.cpp  processor.h
src/combinators/repeat/: repeat.cpp  repeat.h
src/combinators/reserved/: reserved.cpp  reserved.h
src/combinators/separator/: separator.cpp  separator.h
src/combinators/tag/: tag.cpp  tag.h
src/evaluator/base_evaluator/: init.h
src/evaluator/expression/: base_expression.h  expression.cpp  expression.h
src/evaluator/statement/: base_statement.h  statement.cpp  statement.h
src/languge/: init.h  parser.cpp  parser.h
src/lexer/: lexer.cpp  lexer.h
src/types/: default_type.h  result.h  token.h
tests/: combinators.cpp  helper.h  ifstatement.cpp  stress_test.cpp  test.imp
